Add Svea Checkout

--- a/Magento_Checkout/templates/cart/totals.phtml
+++ b/Magento_Checkout/templates/cart/totals.phtml
@@ -16,7 +16,7 @@
         <a class="action viewcart" href="#showcart">
             <?= $block->escapeHtml(__('View and Edit Cart')) ?>
         </a>
-        <a class="action primary" href="/checkout/">
+        <a class="action primary" href="/sveacheckout/">
             <?= $block->escapeHtml(__('Proceed to Checkout')) ?>
         </a>
     </div>
