--- a/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -33,7 +33,7 @@
         }
     }
 
-    .page-layout-checkout,
+    .svea_checkout-index-index {
         .page-header {
             margin-bottom: @indent__base;
         }
