Add cart actions styling

--- a/Magento_Checkout/web/css/source/module/_cart.less
+++ b/Magento_Checkout/web/css/source/module/_cart.less
@@ -35,6 +35,15 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
+
+            .action {
+                &.viewcart {
+                    max-width: 40%;
+                }
+                &.primary {
+                    white-space: nowrap;
+                }
+            }
         }
     }
 
