Change checkout page selector

--- a/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -33,7 +33,7 @@
         }
     }
 
-    .checkout-klarna-index {
+    .page-layout-checkout,
         .page-header {
             margin-bottom: @indent__base;
         }
