Update cart totals styling

--- a/Magento_Checkout/web/css/source/module/_cart.less
+++ b/Magento_Checkout/web/css/source/module/_cart.less
@@ -31,6 +31,10 @@
             font-weight: normal;
         }
 
+        .grand.totals th {
+            font-weight: bold;
+        }
+
         .actions {
             display: flex;
             justify-content: space-around;
@@ -38,7 +42,7 @@
 
             .action {
                 &.viewcart {
-                    max-width: 40%;
+                    padding: 8px 11px;
                 }
                 &.primary {
                     white-space: nowrap;
