Style svea checkout totals

--- a/Svea_Checkout/templates/checkout/cart.phtml
+++ b/Svea_Checkout/templates/checkout/cart.phtml
@@ -28,8 +28,8 @@
         </div>
         <?php echo $block->getChildHtml('newsletter'); ?>
     </div>
-    <div id="svea-checkout_cart_totals">
-        <table>
+    <div id="svea-checkout_cart_totals" class="cart-totals">
+        <table class="table-wrapper">
             <?php echo $block->getChildHtml('totals'); ?>
         </table>
     </div>
