Fix checkout success styling

--- a/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -33,7 +33,8 @@
         }
     }
 
-    .svea_checkout-index-index {
+    .svea_checkout-index-index,
+    .svea_checkout-order-success {
         .page-header {
             margin-bottom: @indent__base;
         }
