Hide continue shopping button in minicart

--- a/Magento_Checkout/web/template/minicart/content.html
+++ b/Magento_Checkout/web/template/minicart/content.html
@@ -32,7 +32,9 @@
                 translate="'Proceed to Checkout'"
             />
         </if>
-        <button class="action close" ontouchstart=""
-            translate="'Continue Shopping'"
-        />
+        <if args="location.pathname.indexOf('checkout/') === -1 || cart.items.getLength() === 0">
+            <button class="action close" ontouchstart=""
+                translate="'Continue Shopping'"
+            />
+        </if>
     </div>
