--- a/Magento_Checkout/web/template/minicart/item/default.html
+++ b/Magento_Checkout/web/template/minicart/item/default.html
@@ -53,12 +53,13 @@
             <div class="details-qty qty">
                 <label class="label" data-bind="i18n: 'Qty', attr: {
                        for: 'cart-item-'+item_id+'-qty'}"></label>
-                <button class="action decrease" data-bind="attr: { disabled: qty() <= 1 }">-</button>
+                <button class="action decrease" data-bind="attr: { disabled: qty() <= ($data.minAllowed || 1) }">-</button>
                 <input data-bind="attr: {
-                       id: 'cart-item-'+item_id+'-qty', disabled: qty() === 0
+                       id: 'cart-item-'+item_id+'-qty', disabled: qty() === 0,
+                       min: $data.minAllowed || 1,
+                       step: $data.qtyIncrements || 1
                        }, value: qty"
                        type="number"
-                       min="1"
                        class="item-qty cart-item-qty">
                 <button class="action increase" data-bind="attr: { disabled: qty() === 0 }">+</button>
             </div>
