Revert "Change checkout page selector"
This reverts commit d02a1afd9bb25b4511a219f985e8737c0f694541.

--- a/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -33,7 +33,7 @@
         }
     }
 
-    .page-layout-checkout,
+    .checkout-klarna-index {
         .page-header {
             margin-bottom: @indent__base;
         }
