Add product attribute height

--- a/Magento_Catalog/web/css/source/module/_listings.less
+++ b/Magento_Catalog/web/css/source/module/_listings.less
@@ -88,8 +88,8 @@
                 }
             }
 
-            &-description {
-                margin: @indent__m 0;
+            &-attribute {
+                color: @text__color__muted;
             }
 
             .price-box {
