--- a/Magento_Catalog/web/css/source/_module.less
+++ b/Magento_Catalog/web/css/source/_module.less
@@ -133,6 +133,10 @@
         }
     }
 
+    .page-title .product-size {
+        display: none;
+    }
+
     .box-tocart {
         display: table;
 
