--- a/web/css/source/_icons.less
+++ b/web/css/source/_icons.less
@@ -8,7 +8,9 @@
         @family-name: @icons__font-name,
         @font-path: @icons__font-path,
         @font-format: 'woff',
+        @font-type: 'woff',
         @font-weight: normal,
-        @font-style: normal
+        @font-style: normal,
+        @font-display: block
     );
 }
