--- a/Magento_Catalog/templates/product/list/toolbar/amount.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/amount.phtml
@@ -11,6 +11,7 @@
  * @var \Magento\Catalog\Block\Product\ProductList\Toolbar $block
  * @var \Magento\Framework\Locale\LocaleFormatter $localeFormatter
  */
+$totalNum = $block->getCollection()->getSize()
 ?>
 <p class="toolbar-amount" id="toolbar-amount">
     <?php if ($block->getLastPageNum() > 1):?>
@@ -19,15 +20,15 @@
                 'Items %1-%2 of %3',
                 '<span class="toolbar-number">' . $localeFormatter->formatNumber($block->getFirstNum()) . '</span>',
                 '<span class="toolbar-number">' . $localeFormatter->formatNumber($block->getLastNum()) . '</span>',
-                '<span class="toolbar-number">' . $localeFormatter->formatNumber($block->getTotalNum()) . '</span>'
+                '<span class="toolbar-number">' . $localeFormatter->formatNumber($totalNum) . '</span>'
             ),
             ['span']
         ) ?>
-    <?php elseif ($block->getTotalNum() == 1):?>
+    <?php elseif ($totalNum == 1):?>
         <?= $block->escapeHtml(
             __(
                 '%1 Item',
-                '<span class="toolbar-number">' . $localeFormatter->formatNumber($block->getTotalNum()) . '</span>'
+                '<span class="toolbar-number">' . $localeFormatter->formatNumber($totalNum) . '</span>'
             ),
             ['span']
         ) ?>
@@ -35,7 +36,7 @@
         <?= $block->escapeHtml(
             __(
                 '%1 Items',
-                '<span class="toolbar-number">' . $localeFormatter->formatNumber($block->getTotalNum()) . '</span>'
+                '<span class="toolbar-number">' . $localeFormatter->formatNumber($totalNum) . '</span>'
             ),
             ['span']
         ) ?>
