Fix search styling

--- a/Magento_CatalogSearch/web/css/source/_module.less
+++ b/Magento_CatalogSearch/web/css/source/_module.less
@@ -157,6 +157,9 @@
         .control {
             position: static;
             padding: 0;
+            &:focus-within {
+                background: transparent;
+            }
         }
 
         .nested {
